<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Helpline">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EF2B2B"
                android:padding="10dp"
                android:text="@string/important_helplines"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/police"
                android:layout_marginTop="20dp"
                android:padding="20dp"/>
            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fire"
                android:layout_marginTop="20dp"
                android:padding="20dp"/>
            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ambulance"
                android:layout_marginTop="20dp"
                android:padding="20dp"/>
            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/women_helpline"
                android:layout_marginTop="20dp"
                android:padding="20dp"/>
            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/women_helpline_domestic_abuse"
                android:layout_marginTop="20dp"
                android:padding="20dp"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>