<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="67dp"
                android:layout_marginBottom="20dp"
                android:text="@string/logout" />

            <TextView
                android:id="@+id/user_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="82dp"
                android:layout_toStartOf="@+id/logout"
                android:text="Hello World!" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >

            <ImageView
                android:id="@+id/webapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/web_app_link"
                app:srcCompat="@drawable/logo12_foreground" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/web_app"
            android:textStyle="bold"
            android:gravity="center"/>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/helpline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/important_helplines"
                app:srcCompat="@drawable/logo_helpline_foreground" />

        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/important_helplines"
            android:textStyle="bold"
            android:gravity="center"/>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/sos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/important_helplines"
                app:srcCompat="@drawable/logo_sos_foreground" />

        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sos"
            android:textStyle="bold"
            android:gravity="center"/>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/magnetometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/magnetometer"
                app:srcCompat="@drawable/logo_sensor_foreground" />

        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detect_camera_microphone"
            android:textStyle="bold"
            android:gravity="center"/>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/gmail_sos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/gmail_sos"
                app:srcCompat="@drawable/logo_sensor_foreground" />

        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gmail_sos"
            android:textStyle="bold"
            android:gravity="center"/>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/police_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nearby_police_station_and_hospitals"
                app:srcCompat="@drawable/logo_sensor_foreground" />

        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nearby_police_station_hospitals"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>


</ScrollView>